l5e-rs/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rs-ingress
  namespace: l5e
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: "rs.jinora.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  l5e-rs
                port:
                  number: 80
